--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 Created using JS Bin
 http://jsbin.com
 
-Copyright (c) 2024 by RT21sDev (http://jsbin.com/kaviqus/3/edit)
+Copyright (c) 2024 by RT21sDev (http://jsbin.com/index.html
+/edit)
 
 Released under the MIT license: http://jsbin.mit-license.org
 -->
